[project]
name = "convopro"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "llama-index>=0.14.22",
    "llama-index-llms-ollama>=0.10.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
